# opentrap

./: .env.shared.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
acme-client/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
acme-client/e2e/: summarize-email.spec.ts
acme-client/fixtures/: inbox.json
acme-client/fixtures/emails/: email-001.html  email-002.html  email-003.html  email-004.html  email-005.html  email-006.html  email-007.html  email-008.html  email-009.html  email-010.html  (+10 more)
acme-client/scripts/: dev.ts
acme-client/src/: client.ts  index.ts  server.ts
acme-client/web/: index.html  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
adapter/: README.md  __init__.py  adapter.md  authoring_worksheet.md  handlers.py  host.py  main.py  routes.py  upstreams.py
adapter/templates/: adapter.yaml  handlers.py  routes.py  upstreams.py
adapter/tests/: test_host.py
opentrap/: .env.example
opentrap/tests/: test_adapter_default_handlers.py  test_adapter_loader.py  test_adapter_main.py  test_adapter_modes_integration.py  test_adapter_runtime.py  test_cli.py  test_cli_event_reducer.py  test_cli_mocked_llm_integration.py  test_cli_plain_renderer.py  test_cli_rich_renderer.py  test_cli_view_model.py  test_config_loader.py  test_evaluation_core.py  test_prompt_injection_via_html_evaluation.py  test_prompt_injection_via_html_generator.py  test_run_orchestration_adapter_status.py  test_runtime.py  test_trap_registry.py  test_trap_registry_loader.py
opentrap/traps/: README.md
(+90 files in other folders)
